replace silex with full distribution + add animation on gallery paintings + add min-height to container to avoid footer clipping

--- a/app/css/animations.css
+++ b/app/css/animations.css
@@ -6,3 +6,22 @@
   animation: fadeIn 1s;
 }
 
+// Zoom effect
+.view-frame .painting.mini {
+    -webkit-transform: scale(1,1);
+    -webkit-transition-timing-function: ease-out;
+    -webkit-transition-duration: 250ms;
+    -moz-transform: scale(1,1);
+    -moz-transition-timing-function: ease-out;
+    -moz-transition-duration: 250ms;
+}
+
+.view-frame .painting.mini:hover {
+    -webkit-transform: scale(1.03,1.05);
+    -webkit-transition-timing-function: ease-out;
+    -webkit-transition-duration: 250ms;
+    -moz-transform: scale(1.03,1.05);
+    -moz-transition-timing-function: ease-out;
+    -moz-transition-duration: 250ms;
+}
+
