--- a/app/css/app.css
+++ b/app/css/app.css
@@ -70,6 +70,7 @@ h2 {
 /* Main container style */
 div.container {
 	width: 75%;
+	min-height: 800px;
 	margin-top: 30px;
 }
 
@@ -77,13 +78,14 @@ div.container {
 .gallery {
 	padding: 30px;
 	text-align:center;
+	display: flex;
 }
 .painting-wrapper {
-	display: inline-block;	
+	//display: inline-block;	
 }
 .painting-wrapper .name {
-	float: left;	
-	width: 100%
+	//float: left;	
+	//width: 100%
 }
 .painting {
 	list-style: none;
